# Bhitti_v2

./: README.md
Bhitti/: CMakeLists.txt  addemployee.cpp  addemployee.h  addemployee.ui  adminagenda.cpp  adminagenda.h  adminagenda.ui  admindash.cpp  admindash.h  admindash.ui  attendance.cpp  attendance.h  attendance.ui  cancelorder.cpp  cancelorder.h  cancelorder.ui  deleteemployee.cpp  deleteemployee.h  deleteemployee.ui  deleteproduct.cpp  deleteproduct.h  deleteproduct.ui  discountcode.cpp  discountcode.h  discountcode.ui  employeedash.cpp  employeedash.h  employeedash.ui  happyvitti.cpp  happyvitti.h  happyvitti.ui  incorrectpassword.ui  incpass.cpp  incpass.h  incpass.ui  login.cpp  login.ui  main.cpp  neworder.cpp  neworder.h  (+12 more)
build-Bhitti-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-Bhitti-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-dcdebe74102e8b9f4fe6.json  codemodel-v2-fe9575f6e96267e8f8a0.json  directory-.-Debug-58f7f2c6c5acac662850.json  index-2022-10-21T18-46-07-0693.json  target-Bhitti-Debug-e18435720a7afb6b65f9.json
build-Bhitti-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-446eb38efec6a959cca6.json  codemodel-v2-b01beff7a1c7dc450ffb.json  index-2022-10-21T18-45-24-0379.json  target-Bhitti-Debug-130aec15117ead2400e0.json  target-Bhitti_autogen-Debug-105783da296ba3b640c6.json  target-Bhitti_autogen_timestamp_deps-Debug-ae423f971d17c1552687.json
build-Bhitti-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-Bhitti-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-Bhitti-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: admindash.cpp.D1EEB7AF70C0F820.idx  admindash.h.9EE0D4F154BF9F9B.idx  attendance.cpp.C5311EC7E16756F0.idx  attendance.h.0753240A1AF531D9.idx  cancelorder.cpp.351BB9A6BA6CAC8F.idx  cancelorder.h.5B3399F3679F6582.idx  employeedash.cpp.4EE13B8DD71C99D4.idx  employeedash.h.5AC22E89ABFD6BC9.idx  (+14 more)
build-Bhitti-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/Bhitti_autogen/: deps  mocs_compilation.cpp
build-Bhitti-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/Bhitti_autogen/EWIEGA46WW/: moc_admindash.cpp  moc_admindash.cpp.d  moc_attendance.cpp  moc_attendance.cpp.d  moc_cancelorder.cpp  moc_cancelorder.cpp.d  moc_employeedash.cpp  moc_employeedash.cpp.d  moc_login.cpp  moc_login.cpp.d  moc_neworder.cpp  moc_neworder.cpp.d  moc_newproduct.cpp  moc_newproduct.cpp.d  moc_trackorder.cpp  moc_trackorder.cpp.d  moc_viewproduct.cpp  moc_viewproduct.cpp.d
build-Bhitti-Desktop_Qt_6_3_1_MinGW_64_bit-Debug/Bhitti_autogen/include/: ui_admindash.h  ui_attendance.h  ui_cancelorder.h  ui_employeedash.h  ui_login.h  ui_neworder.h  ui_newproduct.h  ui_trackorder.h  ui_viewproduct.h
